--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     width: 16%;
     border-radius: 0px 15px 0px 0px;
     background: #bfbfbf;
-    font-size: 24px;
+    font-size: 30px;
     box-shadow: -5px 0px 5px inset #888888;
 }
 
@@ -13,18 +13,18 @@
     border-spacing: 0px;
 }
 
-#selected, #speakerInfoBody {
+#selected, #infoBody {
     background: #e6e6e6;
 }
 
-#speakerInfoBody {
+#infoBody {
     width: 100%;
     height: 100%;
-    font-size: 20px;
+    font-size: 24px;
     box-shadow: 5px 5px 10px #888888;
 }
 
-#speakerInfoBody td {
+#infoBody td {
     width: 50%;
 }
 
@@ -48,7 +48,7 @@ nav {
 	display: block;
 	color: #000000;
 	padding: 14px 10px;
-    font-size: 24px;
+    font-size: 30px;
 	text-decoration: none;
 	margin-left: auto;
     margin-right: auto;
@@ -117,7 +117,7 @@ nav li {
 input[type=button], input[type=submit] {
     color: #ffffff;
     background-color: #a6a6a6;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 input[type=button]:hover, input[type=submit]:hover {
