--- a/style.css
+++ b/style.css
@@ -131,6 +131,13 @@ input[type=button], input[type=submit] {
     font-size: 24px;
 }
 
+
+input[type=reset], input[type=submit] {
+    color: #ffffff;
+    background-color: #a6a6a6;
+    font-size: 24px;
+}
+
 input[type=button]:hover, input[type=submit]:hover {
     background-color: #666666;
 }
